--- a/algo project/algo project.csproj
+++ b/algo project/algo project.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="main.cs" />
     <Compile Include="PrQueue.cs" />
+    <Compile Include="Solver.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
